# kos-0

./: .gitignore  .gitmodules  Doxyfile  Doxyfile.in  Makefile  README.md  debug.gdbinit  grub.cfg  i686-elf.ini  link.ld  meson.build  program  program1  program2  release.gdbinit  template.hpp
boot/: link.ld  meson.build
boot/include/boot/generic/: BootInformation.hpp  Config.h  Kernel.hpp  Memory.hpp  Panic.hpp  multiboot2-Utils.hpp  multiboot2.hpp
boot/include/boot/generic/api/: BootInformation.hpp  Config.hpp  multiboot2.h
boot/include/boot/i686/: Entry.hpp  Paging.hpp
boot/include/boot/x86/: SMP.hpp
boot/src/generic/: BootInfomation.cpp  BootInformation.cpp  Kernel.cpp  Memory.cpp  Multiboot2Header.s
boot/src/i686/: Entry.s  Loader.s  Paging.cpp  bmain.cpp
boot/src/i686/io/: Print.cpp
boot/src/i686/librt/: Hooks.cpp
boot/src/x86/: SMP.cpp  ap_trampoline.s
kernel/: grub.cfg  link.ld  meson.build
kernel/arch/i686/: Rules.mk
kernel/arch/i686/src/: crt0.cpp
kernel/arch/i686/src/asm/: Process.s
kernel/arch/i686/src/boot/: Paging.cpp  Segmentation.cpp  boot.cpp  higher_half.cpp  loader.s  lower_half.cpp
kernel/arch/i686/src/core/: Interrupt.cpp  MultiProcessing.cpp  Paging.cpp  Segmentation.cpp  Syscall.cpp
kernel/arch/intel/: Rules.mk
kernel/arch/intel/src/asm/: gdt.cpp  idt.cpp  page.cpp
kernel/arch/intel/src/core/: Exceptions.cpp
kernel/boot/: meson.build
kernel/boot/include/boot/i686/: Boot.hpp  BootInformation.hpp  HigherHalf.hpp  LowerHalf.hpp
kernel/boot/src/i686/: Boot.cpp  HigherHalf.cpp  Loader.s  LowerHalf.cpp
kernel/core/: meson.build
kernel/core/include/core/generic/: Init.hpp  Modules.hpp  Panic.hpp
kernel/core/include/core/i686/: PrivilegeLevel.hpp
kernel/core/src/generic/: Modules.cpp  icxxabi.cpp  kmain.cpp
kernel/core/src/i686/: crt0.cpp
kernel/core/src/i686/tasks/: Entry.s  (+1 more)
kernel/generic/: Rules.mk
kernel/generic/include/generic/: icxxabi.hpp
kernel/generic/src/: icxxabi.cpp
kernel/generic/src/core/: IPC.cpp  Memory.cpp  Process.cpp
kernel/generic/src/io/: Framebuffer.cpp  PS2Controller.cpp  PS2Keyboard.cpp  Print.cpp  Serial.cpp
kernel/generic/src/stdlib/: string.c
kernel/include/generic/: BootInformation.hpp  Error.hpp  Global.hpp  Init.hpp  Panic.hpp  PerCPU.hpp  SpinLock.hpp  Types.hpp  icxxabi.hpp
kernel/include/generic/devices/: Framebuffer.hpp
kernel/include/generic/log/: Log.hpp
kernel/include/generic/memory/: BootPagesAllocator.hpp  Heap.hpp  LinkedListPagesAllocator.hpp  Memory.hpp  MemoryArea.hpp  MemoryRegions.hpp  Page.hpp  Pages.hpp  PagesAllocator.hpp  Physical.hpp  Syscalls.hpp  Virtual.hpp
kernel/include/generic/tasks/: Elf.hpp  RunQueue.hpp  SchedInfo.hpp  Scheduler.hpp  Signals.hpp  Syscalls.hpp  Tasks.hpp  TasksMap.hpp  TerminatedQueue.hpp  WaitQueue.hpp
kernel/include/generic/timers/: Timer.hpp
kernel/include/generic/vfs/: CommandQueue.hpp  Error.hpp  File.hpp  FileDescriptors.hpp  Initrd.hpp  Inode.hpp  Mountable.hpp  Path.hpp  SuperBlock.hpp  Syscalls.hpp  Tar.hpp  Types.hpp  VFS.hpp  Vnode.hpp
kernel/include/i686/internals/: GDT.hpp  Internals.hpp  Segmentation.hpp  TSS.hpp
kernel/include/i686/interrupts/: IDT.hpp  Interrupts.hpp
kernel/include/i686/memory/: KMap.hpp  Memory.hpp  MemoryMapping.hpp
kernel/include/i686/syscalls/: Access.hpp  Entry.hpp  Syscalls.hpp
kernel/include/i686/tasks/: Entry.hpp  Registers.hpp  Task.hpp
kernel/include/sys/: Error.hpp  Syscalls.hpp  Types.hpp  VfsCommand.hpp
kernel/include/x86/: LocalAPIC.hpp  SMP.hpp
kernel/include/x86/acpi/: ACPI.hpp
kernel/include/x86/assembly/: io.hpp  msr.hpp
kernel/include/x86/interrupts/: 8259.hpp  APIC.hpp  IOAPIC.hpp  LocalAPIC.hpp  PIC.hpp
kernel/src/generic/: BootInformation.cpp  Init.cpp  Modules.cpp  PerCPU.cpp  icxxabi.cpp  kmain.cpp
kernel/src/generic/devices/: Framebuffer.cpp
kernel/src/generic/io/: Print.cpp
kernel/src/generic/librt/: Hooks.cpp
kernel/src/generic/log/: Log.cpp
kernel/src/generic/memory/: Heap.cpp  LinkedListPagesAllocator.cpp  Memory.cpp  MemoryArea.cpp  Physical.cpp  Syscalls.cpp  Virtual.cpp  liballocImpl.cpp
kernel/src/generic/stdlib/: assert.cpp  new.cpp
kernel/src/generic/tasks/: Elf.cpp  Scheduler.cpp  Syscalls.cpp  Tasks.cpp
kernel/src/generic/timers/: Timer.cpp
kernel/src/generic/vfs/: File.cpp  FileDescriptors.cpp  Initrd.cpp  Mountable.cpp  Syscalls.cpp  Tar.cpp  VFS.cpp  Vnode.cpp
kernel/src/i686/: Loader.s  crt0.cpp
kernel/src/i686/internals/: GDT.cpp  Internals.cpp  Segmentation.cpp
kernel/src/i686/interrupts/: IDT.cpp  ISR.s  Interrupts.cpp
kernel/src/i686/memory/: KMap.cpp  Memory.cpp  MemoryMapping.cpp
kernel/src/i686/syscalls/: Access.cpp  Entry.s  Syscalls.cpp
kernel/src/i686/tasks/: Entry.s  Switch.s  Task.cpp
kernel/src/x86/: LocalAPIC.cpp  SMP.cpp
kernel/src/x86/acpi/: ACPI.cpp
kernel/src/x86/assembly/: io.cpp  msr.cpp
kernel/src/x86/interrupts/: 8259.cpp  APIC.cpp  PIC.cpp
kernel/src/x86/timers/: APICTimer.cpp  PIT.cpp  Timer.cpp
librt/: meson.build
librt/include/librt/: Algorithm.hpp  Assert.hpp  Cast.hpp  ConditionalVariable.hpp  DefaultConstruct.hpp  FunctionRef.hpp  Global.hpp  Hooks.hpp  Iterator.hpp  Log.hpp  NonCopyable.hpp  Optional.hpp  Pair.hpp  Panic.hpp  Result.hpp  SharedPtr.hpp  Span.hpp  SpinLock.hpp  String.hpp  StringRef.hpp  Strings.hpp  Trace.hpp  UniquePtr.hpp  Utility.hpp  Variant.hpp
librt/include/librt/containers/: Bitset.hpp  IntrusiveList.hpp  IntrusiveListBase.hpp  List.hpp  ListBase.hpp  Map.hpp  SharedList.hpp  StaticVector.hpp  UniqueList.hpp
librt/src/: Assert.cpp  Hooks.cpp  Log.cpp  New.cpp  Panic.cpp  Strings.cpp  Test.cpp  Trace.cpp  cxxabi.cpp  liballocImpl.cpp  liballoc_1_1.c
librt/src/containers/: IntrusiveListBase.cpp  ListBase.cpp
librt/src/sanitizers/: ubsan.cpp
userspace/: Hooks.cpp  Syscalls.hpp  Syscalls.s  crt0.s  link.ld  main1.cpp  main1.s  main2.cpp  main2.s  meson.build
userspace/initrd/: meson.build
userspace/libsys/: meson.build
userspace/libsys/include/libsys/: Syscalls.hpp  brk.hpp
userspace/libsys/src/: Hooks.cpp  brk.cpp
(+240 files in other folders)
